#4 task 2 google api - change method searchForLocation and add records in package dto.googlelocationpath for that. Use Optional and object Pair for return values lat and lgn